2000-01-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99c

2000-01-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Autoconf update...

	* ntpdate/ntpdate.c (ntpdatemain): Typo
	From: Jack Bryans <jbryans@csulb.edu>

	* Makefile.am (EXTRA_DIST): Add flock-build.  Probably UDel specific...

2000-01-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/check_y2k.c (main): Reformat for ansi2knr

	* configure.in (AC_OUTPUT): Revert to obsolete form until automake
	catches up.

2000-01-22  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Use AC_CHECK_TYPES((s_char)) instead of
	AC_CHECK_TYPE.
	(ac_cv_var_kernel_fll_bug): Generic_106541-08 is apparently OK, too.

	* scripts/Makefile.am (EXTRA_DIST): Need to explicitly distribute
	mkver.in and ntpver.in now, apparently.
	* configure.in: Search for the various audio_info members so the
	printing in audio_show is less of a circus.  This required an
	autoconf upgrade.  Major sigh.

	* libntp/audio.c (audio_show): Clean up (more) properly.

2000-01-21  Sven Dietrich <sven_dietrich@trimble.com>

	* Add pointer to html/hints/winnt.htm to INSTALL file
	* Fix NT makefiles to accomodate at least one weird
	  version of Visual C that can't handle the LFs without
	  the DOS CR also.

2000-01-20  Sven Dietrich <sven_dietrich@trimble.com>

	* Update Copyright in Palisade driver to 2000
	* Fix Palisade MIN & MAX POLL to optimal values

2000-01-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/driver7.htm: Patches from Dave Mills
	* html/driver36.htm: Patches from Dave Mills

	* html/copyright.htm: Added Kamal Mostafa

2000-01-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99b

2000-01-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_chu.c: NCHAN is used with generic ICOM.

	* ntpd/refclock_wwv.c: Use new auido stuff
	* ntpd/refclock_irig.c: Use new audio stuff
	* ntpd/refclock_chu.c: Use new audio stuff
	* ntpd/ntp_proto.c: Clean up